fix: remove contrast checker

--- a/components/full-width-header/full-width-header.less
+++ b/components/full-width-header/full-width-header.less
@@ -95,10 +95,6 @@
 		font-size: @heading-l;
 		line-height: @line-height-heading-l;
 	}
-
-	.full-width-header-text-dark & {
-		color: @black;
-	}
 }
 
 .full-width-header-author {
@@ -108,10 +104,6 @@
 	font-size: @body-text-s;
 	line-height: @line-height-body-small-l;
 	font-weight: @font-weight-normal;
-
-	.full-width-header-text-dark & {
-		color: @black;
-	}
 }
 
 .full-width-header-link {
@@ -141,13 +133,6 @@
 			animation-fill-mode: forwards;
 			animation-name: horizontal-spring-icon-to-left;
 			animation-timing-function: ease-in-out;
-		}
-	}
-
-	.full-width-header-text-dark & {
-		color: @black;
-		.icon {
-			fill: @black;
 		}
 	}
 }
