--- a/components/update-extract-small/update-extract-small.less
+++ b/components/update-extract-small/update-extract-small.less
@@ -56,10 +56,6 @@
 	padding: @spacing-small;
 	top: -5px;
 
-	.case-extract-text-dark & {
-		color: @black;
-	}
-
 	@media @screen-medium {
 		padding: @spacing-medium;
 		height: 130px;
@@ -76,7 +72,7 @@
 	font-weight: @font-weight-bold;
 	margin-bottom: @spacing-default;
 	margin-top: @spacing-default;
-	
+
 	@media @screen-medium {
 		margin-bottom: @spacing-small;
 		margin-top: 0;
